chore: Dependency updates